Bug 155144 - Copying a table from Writer to Impress makes all table design on all tables in Impress disappear
Summary: Copying a table from Writer to Impress makes all table design on all tables i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, dataLoss, regression
Depends on:
Blocks: Table-Styles
  Show dependency treegraph
 
Reported: 2023-05-04 08:48 UTC by Rizal Muttaqin
Modified: 2024-11-14 01:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the issue (3.12 MB, video/x-matroska)
2023-05-04 08:48 UTC, Rizal Muttaqin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rizal Muttaqin 2023-05-04 08:48:02 UTC
Created attachment 187077 [details]
Video showing the issue

Steps to reproduce
1. Create a table in Writer
2. Create a Impress presentation document
3. Add new slide to Impress and insert a table to the new created slide, apply table design
4. Add another new slide and and insert a table there with different table design
5. Add another new slide and paste a table from Writer to the last slide


Observed Result

The table designs in 2nd and 3rd slides disapear.

Expected Result

The table designs in 2nd and 3rd slides retain

This obviously make unnecessary additional works

Affected versions:

Normal Mode && Safe Mode:

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: id-ID
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded

Normal Mode

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 83b1f6b58a30bdb589e9ce73deef39f021aebde1
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: id-ID
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2023-05-04 09:31:34 UTC
Reproduced with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 83b1f6b58a30bdb589e9ce73deef39f021aebde1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also in 7.5:

Version: 7.5.3.1 (X86_64) / LibreOffice Community
Build ID: d29ee673721b12c92b3de9b9663473211414f0db
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Regression, as not in:

Version: 7.4.6.2 / LibreOffice Community
Build ID: 5b1f5509c2decdade7fda905e3e1429a67acd63d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisecting now.
Comment 2 Stéphane Guillou (stragu) 2023-05-04 10:02:31 UTC
Bibisected with linux-64-7.5 repo to first bad commit 66ae76805d5ffbe9077119c2e208269f6026f336 which points to core commit:

commit daab698b346e5e40b67f1e15c796c4e399ccaf8a
author	Maxim Monastirsky <momonasmon@gmail.com>	Tue Nov 22 14:07:12 2022 +0200
committer	Maxim Monastirsky <momonasmon@gmail.com>	Tue Nov 29 09:39:22 2022 +0100
sd: replace hardcoded table styles with xml file
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141825

Pasting the Writer table also gives it the blue look.
Before the commit, the pasted table would get the default sd Table Design.

Maxim, can you please have a look?
Comment 3 Maxim Monastirsky 2023-05-05 09:16:59 UTC
https://gerrit.libreoffice.org/c/core/+/151417
Comment 4 Commit Notification 2023-05-05 11:24:27 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/86b48c757906c3ef647f3d5e2579ac1fef1bf55b

tdf#155144 sd: Don't reset table styles on RTF pasting

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Rizal Muttaqin 2023-05-06 10:44:39 UTC
Verified Fixed in 
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 793cc7d2ef5967af90a6810e597e1e12bd42777c
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: en-US
Calc: threaded


Big thanks, Maxim!!!
Comment 6 Commit Notification 2023-05-08 11:42:56 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a614740c09d99daf1a68f4642fded2c0c7608916

tdf#155144 sd: Don't reset table styles on RTF pasting

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.