tdf#155144 sd: Don't reset table styles on RTF pasting

Regression of daab698b346e5e40b67f1e15c796c4e399ccaf8a
("sd: replace hardcoded table styles with xml file").

The problem is with the temp SdDrawDocument reusing the
document's DrawDocShell. Before the mentioned commit we used
to insert the default table styles directly into the style
sheets pool, and that didn't affect the dest document as each
SdDrawDocument maintains its own pool. However, after that
commit we go through ODF import which use the document model
which happens to be the dest document. This results with all
the default table styles being replaced, with all their
formatting being reset, and all existing tables being reset
to the default style following the disposal of the original
styles. At the same time, this leaves the temp SdDrawDocument
with no table styles in its pool, and so the newly inserted
table ends up with no style assigned.

Change-Id: I9bebae929ec3d54e0139dd212ad0ad1dfe815caa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151417
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>